--- a/axelor-project/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-project/src/main/resources/i18n/messages_fr.csv
@@ -60,6 +60,7 @@
 "Company","Société",,
 "Completed ?","Terminé ?",,
 "Completed project status","Statut projet terminé",,
+"Completed task status",,,
 "Completed tasks","Tâches terminées",,
 "Configuration",,,
 "Configurations",,,
@@ -98,7 +99,6 @@
 "Deadline Tomorrow","Echéance demain",,
 "Deadline Yesterday","Echéance hier",,
 "Decimal","Décimal",,
-"Default completed","Complété par défaut",,
 "Default percentage","Pourcentage par défaut",,
 "Default priorities","Priorités par défaut",,
 "Default sites","Sites par défaut",,
@@ -237,9 +237,10 @@
 "Planned charge","Charge planifiée",,
 "Planned progress","Avancement planifié",,
 "Planning","Planification",,
+"Please check the compute full name groovy formula in project app configuration","Veuillez vérifier la formule groovy du nom complet dans la configuration de l'application du projet",,
 "Please fill canceled project status in App Project configuration.","Veuillez remplir le statut du projet annulé dans la configuration du projet d'application.",,
 "Please fill completed project status in App Project configuration.","Veuillez remplir le statut du projet terminé dans la configuration du projet d'application.",,
-"Please check the compute full name groovy formula in project app configuration","Veuillez vérifier la formule groovy du nom complet dans la configuration de l'application du projet",,
+"Please fill completed task status in Project configuration.",,,
 "Please fill in task date.","Veuillez remplir la date de la tâche.",,
 "Please select project","Veuillez sélectionner un projet",,
 "Please select user","Veuillez sélectionner un utilisateur",,
@@ -362,6 +363,7 @@
 "Task progress","% réalisation",,
 "Task recurrence","Récurrence des tâches",,
 "Task status","Statut tâche",,
+"Task status management",,,
 "Task template","Modèle de tâche",,
 "Task template filters","Filtres modèles de tâche",,
 "Task template list","Liste de modèle de tâche",,
@@ -450,6 +452,12 @@
 "You have no projects or tasks bound to you, your planning can't be generated.","Vous n'êtes sur aucun projet ou aucune tâche, votre planning ne sera pas généré",,
 "You have selected no team for this project","Vous n'avez sélectionné aucune équipe pour ce projet.",,
 "Your team has no projects or tasks bound to it, the planning can't be generated.","Votre équipe n'est sur aucun projet ou aucune tâche, votre planning ne sera pas généré.",,
+"[\u0412\u0447\u043e\u0440\u0430",,,
+"[\u0417\u0430\u0432\u0442\u0440\u0430",,,
+"[\u041c\u0438\u043d\u0443\u043b\u043e\u0433\u043e] dddd [",,,
+"[\u041c\u0438\u043d\u0443\u043b\u043e\u0457] dddd [",,,
+"[\u0421\u044c\u043e\u0433\u043e\u0434\u043d\u0456",,,
+"[\u0423] dddd [",,,
 "hours","heures",,
 "to","à",,
 "updated document","document mis à jour",,
