--- a/axelor-project/src/main/resources/i18n/messages_en.csv
+++ b/axelor-project/src/main/resources/i18n/messages_en.csv
@@ -60,6 +60,7 @@
 "Company",,,
 "Completed ?",,,
 "Completed project status",,,
+"Completed task status",,,
 "Completed tasks",,,
 "Configuration",,,
 "Configurations",,,
@@ -98,7 +99,6 @@
 "Deadline Tomorrow",,,
 "Deadline Yesterday",,,
 "Decimal",,,
-"Default completed",,,
 "Default percentage",,,
 "Default priorities",,,
 "Default sites",,,
@@ -145,7 +145,7 @@
 "From",,,
 "From Date",,,
 "From date",,,
-"Full name could not be computed, please check the groovy formula",,,
+"Full name could not be computed, please check the groovy formula.",,,
 "Full name groovy formula",,,
 "Full screen",,,
 "Gantt",,,
@@ -237,9 +237,10 @@
 "Planned charge",,,
 "Planned progress",,,
 "Planning",,,
+"Please check the compute full name groovy formula in project app configuration",,,
 "Please fill canceled project status in App Project configuration.",,,
 "Please fill completed project status in App Project configuration.",,,
-"Please check the compute full name groovy formula in project app configuration",,,
+"Please fill completed task status in Project configuration.",,,
 "Please fill in task date.",,,
 "Please select project",,,
 "Please select user",,,
@@ -362,6 +363,7 @@
 "Task progress",,,
 "Task recurrence",,,
 "Task status",,,
+"Task status management",,,
 "Task template",,,
 "Task template filters",,,
 "Task template list",,,
@@ -450,6 +452,12 @@
 "You have no projects or tasks bound to you, your planning can't be generated.",,,
 "You have selected no team for this project",,,
 "Your team has no projects or tasks bound to it, the planning can't be generated.",,,
+"[\u0412\u0447\u043e\u0440\u0430",,,
+"[\u0417\u0430\u0432\u0442\u0440\u0430",,,
+"[\u041c\u0438\u043d\u0443\u043b\u043e\u0433\u043e] dddd [",,,
+"[\u041c\u0438\u043d\u0443\u043b\u043e\u0457] dddd [",,,
+"[\u0421\u044c\u043e\u0433\u043e\u0434\u043d\u0456",,,
+"[\u0423] dddd [",,,
 "hours",,,
 "to",,,
 "updated document",,,
