--- a/axelor-human-resource/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-human-resource/src/main/resources/i18n/messages_fr.csv
@@ -156,6 +156,7 @@
 "Company fixed phone","N° de téléphone de la société",,
 "Company's credit card","CB de la société",,
 "Complete",,,
+"Complete my leave request","Compléter ma demande de congés",,
 "Completed",,,
 "Compute amounts","Calculer les montants",,
 "Compute distance with web service","Calculer la distance avec un service web",,
@@ -187,6 +188,7 @@
 "Country of birth","Pays de naissance",,
 "Create","Créer",,
 "Create Leave Request","Demander un congé",,
+"Create Timesheet line",,,
 "Create amendment","Créer avenant",,
 "Create expense","Créer la note de frais",,
 "Create lines for day leaves","Générer des lignes pour les jours de congés",,
