--- a/axelor-human-resource/src/main/resources/i18n/messages_en.csv
+++ b/axelor-human-resource/src/main/resources/i18n/messages_en.csv
@@ -156,6 +156,7 @@
 "Company fixed phone",,,
 "Company's credit card",,,
 "Complete",,,
+"Complete my leave request",,,
 "Completed",,,
 "Compute amounts",,,
 "Compute distance with web service",,,
@@ -187,6 +188,7 @@
 "Country of birth",,,
 "Create",,,
 "Create Leave Request",,,
+"Create Timesheet line",,,
 "Create amendment",,,
 "Create expense",,,
 "Create lines for day leaves",,,
