Feature RM#84195:Extra hour: Re-add ‘Complete my...’ menu entries

--- a/axelor-human-resource/src/main/resources/i18n/messages.csv
+++ b/axelor-human-resource/src/main/resources/i18n/messages.csv
@@ -187,6 +187,7 @@
 "Country of birth",,,
 "Create",,,
 "Create Leave Request",,,
+"Create Timesheet line",,,
 "Create amendment",,,
 "Create expense",,,
 "Create lines for day leaves",,,
@@ -987,6 +988,7 @@
 "Reportings",,,
 "Reports",,,
 "Request date",,,
+"Request extra hours",,,
 "Requested",,,
 "Requested amount",,,
 "Requested lunch vouchers on the period",,,
