--- a/axelor-human-resource/src/main/resources/i18n/messages_fr.csv
+++ b/axelor-human-resource/src/main/resources/i18n/messages_fr.csv
@@ -187,6 +187,7 @@
 "Country of birth","Pays de naissance",,
 "Create","Créer",,
 "Create Leave Request","Demander un congé",,
+"Create Timesheet line",,,
 "Create amendment","Créer avenant",,
 "Create expense","Créer la note de frais",,
 "Create lines for day leaves","Générer des lignes pour les jours de congés",,
@@ -987,6 +988,7 @@
 "Reportings","Rapports",,
 "Reports","Rapports",,
 "Request date","Date de la demande",,
+"Request extra hours","Demander des heures sup.",,
 "Requested","Commandé(e)",,
 "Requested amount","Montant demandé",,
 "Requested lunch vouchers on the period","Tickets Restaurant commandés pour la période",,
